# realraw

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
assets/: icon.icns  realraw.desktop
packaging/windows/: realraw.nsi  realraw.wxs
scripts/: package.bat  package.sh
src/: demos.rs  export.rs  lib.rs  main.rs  photo_ops.rs  thumb_grid.rs
src/app/: about_dialog.rs  app.rs  central.rs  close_dialog.rs  develop.rs  library.rs  menubar.rs  mod.rs  setup_dialog.rs  status_bar.rs  tasks_panel.rs
src/catalog/: develop.rs  error.rs  folder.rs  mod.rs  photo.rs  preview_cache.rs  thumbnail_cache.rs
src/catalog/migrations/: V001__init.sql  V002__add_exif_columns.sql  V003__add_thumbnail_status.sql  V004__photo_develop.sql
src/develop/: decode.rs  mod.rs  pipeline.rs  preview.rs  settings.rs
src/import/: dialog.rs  discovery.rs  exif.rs  mod.rs  thumbnail.rs  worker.rs  xmp.rs
src/task/: context.rs  group.rs  manager.rs  mod.rs  task.rs  widget.rs
